fix event user actions alignment

--- a/css/community.css
+++ b/css/community.css
@@ -561,9 +561,30 @@ div.row1, div.row2 {
 {
   background: none;
 }
+/* Report / Edit / Delete */
+.events_featured_event .userActions a {
+    color: #A09E9E;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold !important;
+}
+.events_featured_event .userActions a:hover {
+  color: #333;
+  text-decoration: underline;
+}
+.events_featured_event #itemBlock .userActions a,
+.events_featured_event #itemBlock div.userActions ul li.flag.event_flag_list_item a
+{
+	top: 0;
+}
 
-
-
+/*
+color: #A09E9E;
+text-decoration: none;
+hover:
+color: #333;
+text-decoration: underline;
+*/
 /* ---------->>> /END Events Page Adjustments <<<-----------*/
 
 
